notifier: make time-since-commit configurable

--- a/enterprise/dev/deployment-lag-notifier/Makefile
+++ b/enterprise/dev/deployment-lag-notifier/Makefile
@@ -7,10 +7,11 @@ clean:
 	rm -f deployment-lag-notifier
 
 run: clean build
-	./deployment-lag-notifier -dry-run
+	# Aggressive thresholds for local testing
+	./deployment-lag-notifier -dry-run -num-commits 10 -allowed-age 10m
 
 prod: clean build
-	./deployment-lag-notifier
+	./deployment-lag-notifier -num-commits 20 -allowed-age 2h30m
 
 test:
 	go test -v
