--- a/package.json
+++ b/package.json
@@ -293,6 +293,7 @@
     "mime-types": "^2.1.28",
     "mini-css-extract-plugin": "^2.1.0",
     "mocha": "^8.3.2",
+    "mocha-suppress-logs": "^0.3.1",
     "mockdate": "^3.0.2",
     "monaco-editor-webpack-plugin": "^3.1.0",
     "mz": "^2.7.0",
