--- a/package.json
+++ b/package.json
@@ -360,6 +360,7 @@
     "@codemirror/text": "^0.19.6",
     "@codemirror/tooltip": "^0.19.16",
     "@codemirror/view": "^0.19.47",
+    "@datadog/browser-rum-slim": "^4.7.1",
     "@reach/accordion": "^0.16.1",
     "@reach/combobox": "^0.16.5",
     "@reach/dialog": "^0.16.2",
