--- a/package.json
+++ b/package.json
@@ -259,6 +259,7 @@
     "css-minimizer-webpack-plugin": "^3.0.2",
     "elm": "^0.19.1-3",
     "elm-webpack-loader": "^8.0.0",
+    "enhanced-resolve": "^5.9.3",
     "esbuild": "^0.14.2",
     "eslint": "^7.17.0",
     "eslint-formatter-lsif": "^1.0.3",
