--- a/.github/workflows/codenotify.yml
+++ b/.github/workflows/codenotify.yml
@@ -2,6 +2,8 @@ name: codenotify
 on:
   pull_request:
     types: [opened, synchronize, ready_for_review]
+    branches-ignore:
+      - 'contractors/**'
 
 jobs:
   codenotify:
