symbols: Build in Docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,5 +1,7 @@
 .git/
 
+**/node_modules
+
 # Vim
 *.swp
 
@@ -43,10 +45,7 @@ yarn-error.log
 
 .tmp/*.jar
 
-/cmd/frontend/internal/graphqlbackend/node_modules
-
 /ui/artifacts
-/ui/node_modules
 /ui/assets/_goTemplates.js
 /ui/assets/analytics.js
 /ui/assets/bundle.js
@@ -91,8 +90,8 @@ cmd/indexer/debug
 /.gtm/
 
 # Web
-node_modules/
 /client/web
+client/browser/build
 
 # Extensions
 /extension-api/dist
