--- a/changes/logging-service.yaml
+++ b/changes/logging-service.yaml
@@ -5,7 +5,7 @@ description: |
 
 # Find all repositories that contain the `fmt.Sprintf` statement using structural search
 on:
-  - repositoriesMatchingQuery: lang:go log.Printf("%d", :[v]) patterntype:structural
+  - repositoriesMatchingQuery: context:sourcegraph lang:go log.Printf(":[u]", :[v]) patterntype:structural
 
 steps:
   # Run Comby (https://comby.dev) to replace the Go statements...
