--- a/client/jetbrains/src/main/resources/META-INF/plugin.xml
+++ b/client/jetbrains/src/main/resources/META-INF/plugin.xml
@@ -14,7 +14,7 @@
 
   <actions>
     <action id="sourcegraph.open" class="com.sourcegraph.action.Open" text="Open File" description="Open selection in Sourcegraph">
-      <keyboard-shortcut first-keystroke="alt A" keymap="$default"/>
+      <keyboard-shortcut first-keystroke="alt shift a" keymap="$default"/>
     </action>
     <action id="sourcegraph.search" class="com.sourcegraph.action.Search" text="Search Selection" description="Search selection on Sourcegraph">
       <keyboard-shortcut first-keystroke="alt s" keymap="$default"/>
