--- a/package.json
+++ b/package.json
@@ -206,9 +206,9 @@
     "@types/pollyjs__core": "4.3.1",
     "@types/pollyjs__persister-fs": "2.0.1",
     "@types/puppeteer": "^5.4.5",
-    "@types/react": "17.0.43",
+    "@types/react": "^18.0.6",
     "@types/react-circular-progressbar": "1.0.2",
-    "@types/react-dom": "17.0.14",
+    "@types/react-dom": "^18.0.2",
     "@types/react-grid-layout": "1.3.0",
     "@types/react-router": "5.1.10",
     "@types/react-router-dom": "5.1.7",
@@ -434,9 +434,9 @@
     "postcss-inset": "^1.0.0",
     "pretty-bytes": "^5.3.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
+    "react": "^18.0.0",
     "react-circular-progressbar": "^2.0.3",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.0",
     "react-dom-confetti": "^0.1.4",
     "react-elm-components": "^1.1.0",
     "react-focus-lock": "^2.7.1",
