--- a/internal/extsvc/pypi/testdata/vcr/GetArchive-tarball.yaml
+++ b/internal/extsvc/pypi/testdata/vcr/GetArchive-tarball.yaml
@@ -170,7 +170,7 @@ interactions:
       Content-Type:
       - application/json
       Date:
-      - Tue, 26 Apr 2022 13:06:11 GMT
+      - Wed, 27 Apr 2022 07:11:06 GMT
       Etag:
       - '"f/91zf43IW/1qa+AHjEZww"'
       Referrer-Policy:
@@ -182,9 +182,9 @@ interactions:
       Vary:
       - Accept-Encoding
       X-Cache:
-      - HIT, MISS
+      - HIT, HIT
       X-Cache-Hits:
-      - 1, 0
+      - 1, 1
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
@@ -194,9 +194,9 @@ interactions:
       X-Pypi-Last-Serial:
       - "13627493"
       X-Served-By:
-      - cache-iad-kiad7000137-IAD, cache-fra19156-FRA
+      - cache-iad-kiad7000137-IAD, cache-fra19173-FRA
       X-Timer:
-      - S1650978371.010267,VS0,VE101
+      - S1651043466.156614,VS0,VE1
       X-Xss-Protection:
       - 1; mode=block
     status: 200 OK
@@ -675,7 +675,7 @@ interactions:
       Access-Control-Allow-Origin:
       - '*'
       Age:
-      - "108"
+      - "65203"
       Cache-Control:
       - max-age=365000000, immutable, public
       Content-Length:
@@ -683,7 +683,7 @@ interactions:
       Content-Type:
       - application/x-tar
       Date:
-      - Tue, 26 Apr 2022 13:06:12 GMT
+      - Wed, 27 Apr 2022 07:11:07 GMT
       Etag:
       - '"be4d8add7306f9f005f7fda731503e3d"'
       Last-Modified:
@@ -693,9 +693,9 @@ interactions:
       Strict-Transport-Security:
       - max-age=31536000; includeSubDomains; preload
       X-Cache:
-      - HIT, MISS
+      - HIT, HIT
       X-Cache-Hits:
-      - 1, 0
+      - 1, 1
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
@@ -706,9 +706,9 @@ interactions:
       X-Robots-Header:
       - noindex
       X-Served-By:
-      - cache-sea4444-SEA, cache-hhn4047-HHN
+      - cache-sea4444-SEA, cache-hhn4023-HHN
       X-Timer:
-      - S1650978372.273421,VS0,VE148
+      - S1651043467.336913,VS0,VE1
       X-Xss-Protection:
       - 1; mode=block
     status: 200 OK
