--- a/.github/ISSUE_TEMPLATE/accessibility_issue.yaml
+++ b/.github/ISSUE_TEMPLATE/accessibility_issue.yaml
@@ -57,4 +57,11 @@ body:
       - label: Please give this issue an estimate by applying a label like `estimate/Xd`, where X is the estimated number of days it will take to complete.
       - label: If this issue is specific to a specific Sourcegraph product, please assign the appropriate team label to this issue.
       - label: If this issue will require input from designers in order to complete, please assign the label `needs-design`.
-      - label: If you are confident that this issue should be worked on by GitStart, please assign the label `gitstart` and add the assignee `gitstart-sourcegraph`. The Frontend Platform team will still triage any unassigned issues.
+  - type: checkboxes
+    id: assignees
+    attributes:
+      label: Assignees
+      options:
+      - label: If this issue should be fixed by your team, please assign a relevant member to it, or check this box to signal that you will do so in the near future.
+      - label: If this issue should be fixed by GitStart, please assign the label 'gitstart' and add the assignee 'gitstart-sourcegraph'.
+      - label: If the issue needs more clarification, or you are unsure who should fix it, please leave the issue unassigned. The Frontend Platform team will triage any unassigned issues.
