--- a/.github/ISSUE_TEMPLATE/accessibility_issue.yaml
+++ b/.github/ISSUE_TEMPLATE/accessibility_issue.yaml
@@ -57,11 +57,15 @@ body:
       - label: Please give this issue an estimate by applying a label like `estimate/Xd`, where X is the estimated number of days it will take to complete.
       - label: If this issue is specific to a specific Sourcegraph product, please assign the appropriate team label to this issue.
       - label: If this issue will require input from designers in order to complete, please assign the label `needs-design`.
-  - type: checkboxes
-    id: assignees
+      - label: If you are confident that this issue should be fixed by GitStart, please assign the label `gitstart`.
+  - type: dropdown
+    id: owner
     attributes:
-      label: Assignees
+      label: Owner
+      description: To ensure we have a clear owner for fixing this issue, please select a following option.
       options:
-      - label: If this issue should be fixed by your team, please assign a relevant member to it, or check this box to signal that you will do so in the near future.
-      - label: If this issue should be fixed by GitStart, please assign the label 'gitstart' and add the assignee 'gitstart-sourcegraph'.
-      - label: If the issue needs more clarification, or you are unsure who should fix it, please leave the issue unassigned. The Frontend Platform team will triage any unassigned issues.
+      - This issue will be fixed by my team, I have assigned a relevant member to it, or I will do so in the near future.
+      - This issue will be fixed by GitStart. I have assigned the label 'gitstart' and added the assignee 'gitstart-sourcegraph'.
+      - I'm unsure who should work on this issue or if it needs more clarification. I will let the Frontend Platform team triage this.
+    validations:
+      required: true
