address PR comments

--- a/internal/extsvc/pypi/testdata/vcr/download.yaml
+++ b/internal/extsvc/pypi/testdata/vcr/download.yaml
@@ -238,7 +238,7 @@ interactions:
       Content-Type:
       - text/html; charset=UTF-8
       Date:
-      - Thu, 28 Apr 2022 13:12:02 GMT
+      - Fri, 29 Apr 2022 15:04:38 GMT
       Etag:
       - '"4rpFlsI0iuFb4ILsez4JAQ"'
       Referrer-Policy:
@@ -252,7 +252,7 @@ interactions:
       X-Cache:
       - HIT, HIT, HIT
       X-Cache-Hits:
-      - 1, 1007, 26
+      - 1, 4301, 20
       X-Content-Type-Options:
       - nosniff
       X-Frame-Options:
@@ -262,9 +262,9 @@ interactions:
       X-Pypi-Last-Serial:
       - "12485041"
       X-Served-By:
-      - cache-bwi5180-BWI, cache-iad-kiad7000126-IAD, cache-hhn4020-HHN
+      - cache-bwi5180-BWI, cache-iad-kiad7000158-IAD, cache-fra19125-FRA
       X-Timer:
-      - S1651151522.491315,VS0,VE0
+      - S1651244679.831895,VS0,VE0
       X-Xss-Protection:
       - 1; mode=block
     status: 200 OK
@@ -394,7 +394,7 @@ interactions:
       Access-Control-Allow-Origin:
       - '*'
       Age:
-      - "1323410"
+      - "1416566"
       Cache-Control:
       - max-age=365000000, immutable, public
       Content-Length:
@@ -402,7 +402,7 @@ interactions:
       Content-Type:
       - application/octet-stream
       Date:
-      - Thu, 28 Apr 2022 13:12:03 GMT
+      - Fri, 29 Apr 2022 15:04:40 GMT
       Etag:
       - '"637ae94cb6f2f1d9ea9020293055964a"'
       Last-Modified:
@@ -425,9 +425,9 @@ interactions:
       X-Robots-Header:
       - noindex
       X-Served-By:
-      - cache-sea4462-SEA, cache-hhn4079-HHN
+      - cache-sea4462-SEA, cache-hhn4044-HHN
       X-Timer:
-      - S1651151524.777302,VS0,VE1
+      - S1651244680.063998,VS0,VE1
       X-Xss-Protection:
       - 1; mode=block
     status: 200 OK
