server: pin postgresql-contrib
this needs to be the same version as postgres, otherwise you run into
linking issues.

--- a/cmd/server/Dockerfile
+++ b/cmd/server/Dockerfile
@@ -53,7 +53,7 @@ RUN apk add --no-cache --verbose \
     # between Sourcegraph releases.
     && apk add --no-cache --verbose \
     postgresql=~12 \
-    postgresql-contrib \
+    postgresql-contrib=~12 \
     --repository=http://dl-cdn.alpinelinux.org/alpine/v3.12/main  \
     && apk add --no-cache --verbose \
     'bash>=5.0.17' \
