--- a/sg.config.yaml
+++ b/sg.config.yaml
@@ -967,13 +967,19 @@ tests:
     cmd: yarn run jest --testPathIgnorePatterns end-to-end regression integration storybook
 
   frontend-e2e:
+    preamble: "sg start enterprise-e2e must be already running for these tests to work."
     cmd: |
-      ./dev/run-frontend-e2e.sh
+      yarn run test-e2e
     env:
       TEST_USER_EMAIL: test@sourcegraph.com
       TEST_USER_PASSWORD: supersecurepassword
       SOURCEGRAPH_BASE_URL: https://sourcegraph.test:3443
       BROWSER: chrome
+    secrets:
+      GH_TOKEN:
+        provider: "gcloud"
+        project: "sourcegraph-ci"
+        name: "BUILDKITE_GITHUBDOTCOM_TOKEN"
 
   docsite:
     cmd: .bin/docsite_${DOCSITE_VERSION} check ./doc
